deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskly-demo
  labels:
    app: taskly-demo
spec:
  selector:
    matchLabels:
      app: taskly-demo
  template:
    metadata:
      labels:
        app: taskly-demo
        tier: web
    spec:
      containers:
      - name: taskly-demo
        image: gcr.io/proton-wallet/foobar-faucet@sha:blah
        ports:
        - containerPort: 3000
