app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskly-demo
  labels:
    app: taskly-demo
spec:
  selector:
    matchLabels:
      app: taskly-demo
  template:
    metadata:
      labels:
        app: taskly-demo
        tier: web
    spec:
      containers:
      - name: taskly-demo
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: taskly-demo-backend
  labels:
    app: taskly-demo
spec:
  type: NodePort
  selector:
    app: taskly-demo
    tier: web
  ports:
  - port: 3000
    targetPort: 3000
