ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: taskly-demo-ssl-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: taskly-demo-issuer
  labels:
    app: taskly-demo
spec:
  tls:
  - secretName: taskly-demo-cert
    hosts:
    - taskly.protonchain.com
  rules:
  - host: taskly.protonchain.com
    http:
      paths:
      - backend:
          serviceName: taskly-demo-backend
          servicePort: 3000
        path: /
